--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=0.24.2
+fastapi==0.104.1
+uvicorn==0.24.0
+pymongo==4.6.1
+python-dotenv==1.0.0
+slack-bolt==1.18.1
+numpy==1.26.2
+pandas==2.1.3
+scikit-learn==1.3.2
 spacy>=3.1.0
 nltk>=3.6.0
 pytest>=7.0.0
-python-dotenv>=0.19.0
-fastapi>=0.68.0
-uvicorn>=0.15.0
 pydantic>=1.8.0 
